move away from deprecated org.apache http libs to urlconnection